# andrew_chat

./: AGENTS.md  CLONEATHON.md  Cargo.toml  README.md  TODO.md
api/: Cargo.toml  models.json
api/src/: lib.rs  model_config.rs
desktop/src/: main.rs
desktop/src/views/: blog.rs
llms/: dioxus.md
mobile/src/: main.rs
mobile/src/views/: blog.rs
ui/: Cargo.toml
ui/src/: echo.rs  hero.rs  lib.rs  navbar.rs
web/: Cargo.toml  models.json  package-lock.json  package.json  tailwind.config.js
web/assets/: chat.css  main.css  tailwind.css
web/src/: lib.rs  main.rs  mod.rs  model_config.rs  routes.rs  speech.rs
web/src/views/: chat.rs  login.rs  mod.rs  not_found.rs  settings.rs  theme.rs
