[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
once_cell = "1"
tokio = { version = "1", features = ["sync"] }
serde_json = "1"
urlencoding = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
