[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
api = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "MediaQueryList"] }
katex-wasmbind = { workspace = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
