[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
api = { workspace = true }
katex-wasmbind = { workspace = true }
futures-util = "0.3"
gloo-file = { version = "0.3", features = ["futures"] }
base64 = { workspace = true }
web-sys = { version = "0.3", features = [
    "Window",
    "MediaQueryList",
    "SpeechRecognition",
    "SpeechRecognitionEvent",
    "SpeechRecognitionResult",
    "SpeechRecognitionResultList",
    "SpeechRecognitionAlternative",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "Storage"
] }
pulldown-cmark = "0.9"
wasm-bindgen = "0.2"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
