[package]
name = "web"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dioxus = { workspace = true, features = ["router"] }
api = { workspace = true }
ui = { workspace = true }
katex-wasmbind = { workspace = true }
futures-util = "0.3"
gloo-file = { version = "0.3", features = ["futures"] }
base64 = { workspace = true }
web-sys = { version = "0.3", features = [
  "Window",
  "MediaQueryList",
  "SpeechRecognition",
  "SpeechRecognitionEvent",
  "SpeechRecognitionResult",
  "SpeechRecognitionResultList",
  "SpeechRecognitionAlternative",
  "SpeechSynthesis",
  "SpeechSynthesisUtterance",
  "Storage",
  "DomTokenList",
  "Element",
] }
pulldown-cmark = "0.9"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
